--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,7 @@ footer {
         justify-content: center;
         align-items: center;
         width: 100%;
+        padding-left: 60px;
     }
 
     .text-area-right {
