--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ footer {
 }
 
 .social-media a {
-    color: #FFFFFF; /* Color del ícono */
+    color: #FFFFFF !important; /* Color del ícono */
     margin: 0 10px;
     text-decoration: none;
     font-size: 24px; /* Tamaño del ícono */
